--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pytest-cov>=6.0.0",
     "pytest-flask>=1.3.0",
     "sqlalchemy>=2.0.39",
+    "moto[s3]>=5.1.3",
 ]
 
 [tool.coverage.run]
